--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+server.port=9090
 sfg.brewery.apihost=http://localhost:8080
+sfg.brewery.beerApiPath=/api/v1/beer/
+sfg.brewery.customerApiPath=/api/v1/customer/
