Zipkin con Logback en formato JSON Limpieza de dependencias duplicadas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ server.port=9090
 sfg.brewery.apihost=http://localhost:8080
 sfg.brewery.beerApiPath=/api/v1/beer/
 sfg.brewery.customerApiPath=/api/v1/customer/
+
+# Muestra información detallada del cliente apache
+logging.level.org.apache.http=info
+
+apache.maxtotalconnections=100
+apache.defaultmaxtotalconnections=20
+apache.connectionrequesttimeout=3000
+apache.sockettimeout=3000
